new Project modal opening

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind utilities;
 @tailwind components;
+
+@layer utilities {
+  .blur-bg {
+    background-color: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(4px);
+  }
+}
