login page and functionality

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,4 +7,8 @@
     background-color: rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(4px);
   }
+
+  .h-screen-minus-64 {
+    height: calc(100vh - 64px);
+  }
 }
